# CnesData

./: .claudeignore  .coveragerc  .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  DICIONARIO_DE_DADOS.md  PROJECT_CONTEXT.md  README.md  ROADMAP.md  cnes_tables_test.txt  cols.txt  cols_out.txt  conftest.py  data_dictionary.md  docker-compose.perf.yml  docker-compose.shadow.yml  docker-compose.yml  export_log.txt  intersect.txt  invest_out.txt  output.txt  pyproject.toml  pytest.ini  requirements.txt  tables.txt  win_test.txt  win_test2.txt  win_test2_out.txt  win_test3.txt  win_test3_out.txt  win_test4.txt  win_test4_out.txt  win_test5.txt  win_test_out.txt
.claude/: .mcp.json  napkin.md  settings.local.json
.claude/agents/: bug-hunter.md  cnes-domain-expert.md  code-reviewer.md  data-quality-auditor.md  performance-optimizer.md  (+2 more)
.github/: CODEOWNERS
.streamlit/: config.toml
alembic/: env.py
apps/batch_watcher/: CLAUDE.md  Dockerfile  pyproject.toml
apps/batch_watcher/src/batch_watcher/: config.py  main.py  watcher.py
apps/batch_watcher/tests/: conftest.py  test_batch_watcher_main.py  test_config.py  test_watcher.py
apps/central_api/: CLAUDE.md  Dockerfile  pyproject.toml
apps/central_api/src/central_api/: app.py  deps.py  middleware.py
apps/central_api/src/central_api/repositories/: agent_status_repo.py  dashboard_repo.py  dashboard_repo_overview.py
apps/central_api/src/central_api/routes/: access_requests.py  admin.py  agents.py  dashboard.py  extractions.py  health.py  ingest.py  jobs.py  oauth.py  overview.py  provision.py  provision_rotate.py
apps/central_api/tests/: conftest.py  test_access_requests_routes.py  test_app.py  test_app_wiring.py  test_auth_middleware.py  test_dashboard_routes_agents.py  test_dashboard_routes_auth_tenants.py  test_deps_auth.py  test_oauth_activate_confirm.py  test_overview_routes.py  test_query_counter_middleware.py  test_smoke.py
apps/central_api/tests/repositories/: conftest.py  test_agent_status_repo.py  test_dashboard_repo.py  test_dashboard_repo_agents.py  test_dashboard_repo_overview.py  test_dashboard_repo_signup.py
apps/central_api/tests/routes/: conftest.py  test_agents.py  test_extractions_enqueue.py  test_jobs_complete_upload.py  test_jobs_register_v2.py  test_jobs_v2.py  test_jobs_validation.py  test_oauth_provision_e2e.py  test_oauth_routes.py  test_provision_rotate_e2e.py  test_provision_rotate_routes.py  test_provision_routes.py
apps/cnes_db_migrator/: CLAUDE.md  Dockerfile  pyproject.toml
apps/cnes_db_migrator/src/cnes_db_migrator/: run.py
apps/cnes_db_migrator/tests/: test_run.py
apps/data_processor/: CLAUDE.md  Dockerfile  pyproject.toml
apps/data_processor/src/data_processor/: config.py  consumer.py  main.py  poll.py  processor.py
apps/data_processor/src/data_processor/adapters/: bpa_adapter.py  cnes_local_adapter.py  cnes_nacional_adapter.py  sia_adapter.py  sia_dim_sync.py  sihd_local_adapter.py
apps/data_processor/tests/: test_consumer.py  test_data_processor_main.py  test_poll.py  test_processor.py
apps/data_processor/tests/adapters/: test_bpa_adapter.py  test_cnes_local_adapter.py  test_cnes_nacional_adapter.py  test_sia_adapter.py  test_sia_dim_sync.py
apps/dump_agent/: CLAUDE.md  Dockerfile  pyproject.toml
apps/dump_agent/src/dump_agent/: cli.py  io_guard.py  main.py  platform_runtime.py
apps/dump_agent/src/dump_agent/extractors/: cnes_extractor.py  protocol.py  registry.py  sihd_extractor.py
apps/dump_agent/src/dump_agent/stages/: exportacao.py  ingestao_local.py  ingestao_nacional.py  processamento.py
apps/dump_agent/src/dump_agent/worker/: connection.py  consumer.py  executor.py  streaming_executor.py
apps/dump_agent/tests/: conftest.py  test_cli.py  test_io_guard.py  test_main.py  test_pipeline_integration.py  test_platform_runtime.py  test_platform_runtime_posix.py  test_platform_runtime_windows.py
apps/dump_agent/tests/extractors/: test_cnes_extractor.py  test_registry.py  test_sihd_extractor.py
apps/dump_agent/tests/pipeline/stages/: test_exportacao.py  test_ingestao_local.py  test_ingestao_nacional.py  test_processamento.py
apps/dump_agent/tests/worker/: test_connection.py  test_consumer_async.py  test_consumer_complete_upload.py  test_consumer_v3.py  test_jitter.py  test_run_worker.py  test_streaming_executor.py
data/: walkthrough.md
docker-compose.keycloak/: realm.json
docs/: 4f Technical audit and risk assessment of the hardened architecture.md  4r Technical Implementation Document.md  architecture.md  data-dictionary-bpa.md  data-dictionary-cnes.md  data-dictionary-firebird-bigquery.md  data-dictionary-gold-v2.md  data-dictionary-sia.md  data-dictionary-sihd-hospital.md  migration-plan-gold-v2.md  openapi.json  perf-testing.md  project-context.md  roadmap.md
scripts/: Run-CnesAudit.ps1  Schedule-CnesAudit.ps1  bench_gate.py  bench_gate_test.py  consolidate_compose.py  consolidate_compose_test.py  consolidate_workflows.py  consolidate_workflows_test.py  dashboard.py  dashboard_components.py  dashboard_status.py  db_profiling_01_schema_discovery.py  db_profiling_02_domains_and_status.py  db_profiling_02b_domains_fixed.py  db_profiling_03_domains_lookup_and_audit.py  db_profiling_04_final_audit_and_master_query.py  debug_equipe_nulls.py  explore_cnes.py  export_openapi.py  fb156_setup.py  flag_quality_violation.py  gen_bpa_gdb_fixture.py  gen_contracts.py  gen_golden_fixtures.py  gen_golden_fixtures_test.py  gen_openapi.py  gen_openapi_test.py  gen_shadow_seed_sql.py  gen_shadow_seed_sql_test.py  gen_sia_dbf_fixtures.py  glosas_helpers.py  hr_pre_processor.py  introspect_bpa_gdb.py  introspect_bpa_gdb_test.py  introspect_sia_dbf.py  introspect_sia_dbf_test.py  investigate_tables.py  metricas_helpers.py  migrate_db_v1.py  parse_datasus_pdfs.py  (+19 more)
spike_fb_driver/: out_go.parquet
src/: cli.py  cnes_exporter.py  config.py  explore_cnes.py  main.py  test_conn.py  test_query.py
tests/: conftest.py  test_cli.py  test_config.py  test_exporter_integration.py  test_main.py  test_pipeline_integration.py  test_transformer.py
(+525 files in other folders)
