[project]
name = "cnesdata-workspace"
version = "0.1.0"
description = "CnesData monorepo workspace"
requires-python = ">=3.13"
dependencies = []

[tool.uv.workspace]
members = ["packages/*", "apps/*"]

[tool.uv]
override-dependencies = ["protobuf==6.33.6"]
dev-dependencies = [
    "pytest>=9.0",
    "pytest-docker>=3.1",
    "faker>=30",
    "ruff>=0.15",
]

[tool.pyright]
reportMissingModuleSource = "none"

[tool.pytest.ini_options]
markers = [
    "integration: testes que requerem banco Firebird ativo",
    "bigquery: testes que requerem internet e credenciais Google Cloud",
    "postgres: testes de integração que requerem PostgreSQL via Docker",
]

[tool.ruff]
line-length = 100
