[project]
name = "batch_watcher"
version = "0.1.0"
description = "Watcher one-shot que decide quando abrir batch_trigger"
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "cnes_domain",
    "cnes_infra",
    "python-dotenv",
]

[project.scripts]
batch-watcher = "batch_watcher.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/batch_watcher"]

[tool.uv.sources]
cnes_domain = { workspace = true }
cnes_infra = { workspace = true }
