[project]
name = "central-api"
version = "0.1.0"
description = "FastAPI application — HTTP ingestion + job status"
requires-python = ">=3.13"
dependencies = [
    "cnes-infra",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "httpx>=0.28",
    "slowapi>=0.1.9",
]

[tool.uv.sources]
cnes-infra = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/central_api"]
