[project]
name = "cnes-db-migrator"
version = "0.1.0"
description = "Alembic migration runner — init-container para Kubernetes"
requires-python = ">=3.13"
dependencies = [
    "cnes-infra",
]

[project.scripts]
cnes-migrate = "cnes_db_migrator.run:main"

[tool.uv.sources]
cnes-infra = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cnes_db_migrator"]
