[project]
name = "data-processor"
version = "0.1.0"
description = "Server-side worker — downloads Parquet from MinIO, transforms, persists to Gold schema"
requires-python = ">=3.13"
dependencies = [
    "cnes-infra[etl]",
    "httpx>=0.27",
]

[tool.uv.sources]
cnes-infra = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/data_processor"]
