[project]
name = "dump-agent"
version = "0.1.0"
description = "ETL worker — Firebird extraction, pipeline stages, async job consumer"
requires-python = ">=3.13"
dependencies = [
    "cnes-infra[etl]",
    "backoff>=2.2",
    "tenacity>=9.1",
    "loguru>=0.7",
]

[tool.uv.sources]
cnes-infra = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dump_agent"]
