[project]
name = "dump-agent"
version = "0.2.0"
description = "ELT extraction worker — Firebird → raw Parquet → MinIO"
requires-python = ">=3.13"
dependencies = [
    "cnes-domain",
    "fdb>=2.0",
    "httpx>=0.27",
    "polars>=1.20",
    "backoff>=2.2",
    "tenacity>=9.1",
    "loguru>=0.7",
]

[tool.uv.sources]
cnes-domain = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dump_agent"]
